--- a/Statistics and Machine Learning.ipynb
+++ b/Statistics and Machine Learning.ipynb
@@ -222,11 +222,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Polynomial regression is a special case of linear regression. With the main idea of how do you select your features. Looking at the multivariate regression with 2 variables: x1 and x2. Linear regression will look like this: y = a1 * x1 + a2 * x2.\n",
+    "\n",
+    "# Now you want to have a polynomial regression (let's make 2 degree polynomial). We will create a few additional features: x1*x2, x1^2 and x2^2. So we will get your 'linear regression':\n",
+    "\n",
+    "# y = a1 * x1 + a2 * x2 + a3 * x1*x2 + a4 * x1^2 + a5 * x2^2\n",
+    "\n",
+    "# This nicely shows an important concept curse of dimensionality, because the number of new features grows much faster than linearly with the growth of degree of polynomial.\n",
+    "\n",
+    "# In case you are using a multivariate regression and not just a univariate regression, do not forget the cross terms. For instance if you have two variables x1 and x2, and you want polynomials up to power 2, you should use y=a1x1+a2x2+a3x21+a4x22+a5x1x2 where the last term (a5x1x2) is the one I am talking about."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "arr_list=[]\n",
+    "while True:\n",
+    "    try:\n",
+    "        arr=input().strip().split()\n",
+    "        arr_list.append(arr)\n",
+    "    except:\n",
+    "        break\n",
+    "\n",
+    "columns_count = int(arr_list[0][0])+1\n",
+    "rows_count = int(arr_list[0][1])\n",
+    "test_start_index = rows_count\n",
+    "test_end_index = rows_count+int(arr_list[rows_count+1][0])+1\n",
+    "x=[]\n",
+    "y=[]\n",
+    "x_test=[]\n",
+    "\n",
+    "for i in range(len(arr_list)):\n",
+    "    \n",
+    "    if i==0:\n",
+    "        continue\n",
+    "    elif 1<=i<=rows_count:\n",
+    "        x.append([arr_list[i][0],arr_list[i][1]])\n",
+    "        y.append(arr_list[i][2])\n",
+    "    elif i==rows_count +1:\n",
+    "        continue\n",
+    "    \n",
+    "    elif rows_count +2<=i<=rows_count +int(arr_list[rows_count +1][0])+1:\n",
+    "        x_test.append([arr_list[i][0],arr_list[i][1]])\n",
+    "\n",
+    "\n",
+    "poly = PolynomialFeatures(degree=3)\n",
+    "X_ = poly.fit_transform(x)\n",
+    "X_test_ = poly.fit_transform(x_test)\n",
+    "\n",
+    "lg = LinearRegression()\n",
+    "\n",
+    "# Fit\n",
+    "lg.fit(X_, y)\n",
+    "\n",
+    "# Obtain coefficients\n",
+    "lg.coef_\n",
+    "\n",
+    "print(\"\\n\".join(list(map(str,lg.predict(X_test_)))))\n"
+   ]
   }
  ],
  "metadata": {
