--- a/Statistics and Machine Learning.ipynb
+++ b/Statistics and Machine Learning.ipynb
@@ -144,6 +144,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.807027216905996, 1.708185943772348e-05)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -242,52 +260,131 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "mn = input()\n",
+    "mn = mn.strip().split(' ')\n",
+    "\n",
+    "m = int(mn[0])\n",
+    "n = int(mn[1])\n",
+    "\n",
+    "X = []\n",
+    "Y = []\n",
+    "for i in range(n):\n",
+    "    x = input()\n",
+    "    x = x.strip().split(' ')\n",
+    "    x = [float(a) for a in x]\n",
+    "    X.append(x[0:m])\n",
+    "    Y.append(x[m:])\n",
+    "\n",
+    "q = input()\n",
+    "q = int(q.strip())\n",
+    "\n",
+    "X_test = []\n",
+    "for i in range(q):\n",
+    "    x_test = input()\n",
+    "    x_test = x_test.strip().split(' ')\n",
+    "    x_test = [float(a) for a in x_test]\n",
+    "    X_test.append(x_test)\n",
+    "\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "arr_list=[]\n",
-    "while True:\n",
-    "    try:\n",
-    "        arr=input().strip().split()\n",
-    "        arr_list.append(arr)\n",
-    "    except:\n",
-    "        break\n",
-    "\n",
-    "columns_count = int(arr_list[0][0])+1\n",
-    "rows_count = int(arr_list[0][1])\n",
-    "test_start_index = rows_count\n",
-    "test_end_index = rows_count+int(arr_list[rows_count+1][0])+1\n",
-    "x=[]\n",
-    "y=[]\n",
-    "x_test=[]\n",
-    "\n",
-    "for i in range(len(arr_list)):\n",
-    "    \n",
-    "    if i==0:\n",
-    "        continue\n",
-    "    elif 1<=i<=rows_count:\n",
-    "        x.append([arr_list[i][0],arr_list[i][1]])\n",
-    "        y.append(arr_list[i][2])\n",
-    "    elif i==rows_count +1:\n",
-    "        continue\n",
-    "    \n",
-    "    elif rows_count +2<=i<=rows_count +int(arr_list[rows_count +1][0])+1:\n",
-    "        x_test.append([arr_list[i][0],arr_list[i][1]])\n",
-    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "import numpy as np\n",
     "\n",
     "poly = PolynomialFeatures(degree=3)\n",
-    "X_ = poly.fit_transform(x)\n",
-    "X_test_ = poly.fit_transform(x_test)\n",
+    "poly.fit(np.array(X))\n",
     "\n",
-    "lg = LinearRegression()\n",
+    "regression = LinearRegression()\n",
+    "regression.fit(poly.transform(np.array(X)), Y)\n",
     "\n",
-    "# Fit\n",
-    "lg.fit(X_, y)\n",
+    "Y_test = regression.predict(poly.transform(np.array(X_test)))\n",
+    "for y_test in Y_test:\n",
+    "    print(round(y_test[0], 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def p_c_c(x, y, n):\n",
+    "    sum_xi_yi = sum([x[i] * y[i] for i in range(n)])\n",
+    "    prod = sum(x) * sum(y)\n",
+    "    s_x = (n * sum([x[i] * x[i] for i in range(n)])) - sum(x) ** 2\n",
+    "    s_y = (n * sum([y[i] * y[i] for i in range(n)])) - sum(y) ** 2\n",
+    "    denom = (s_x * s_y) ** 0.5\n",
+    "    nume = (n * sum_xi_yi) - prod\n",
+    "    return round((nume / denom), 2)\n",
     "\n",
-    "# Obtain coefficients\n",
-    "lg.coef_\n",
     "\n",
-    "print(\"\\n\".join(list(map(str,lg.predict(X_test_)))))\n"
+    "number_of_rows = int(input().strip())\n",
+    "math = []\n",
+    "phy = []\n",
+    "che = []\n",
+    "for _ in range(number_of_rows):\n",
+    "    row_i = list(map(float, input().strip().split()))\n",
+    "    math.append(row_i[0])\n",
+    "    phy.append(row_i[1])\n",
+    "    che.append(row_i[2])\n",
+    "\n",
+    "print(p_c_c(math, phy, number_of_rows))\n",
+    "print(p_c_c(phy, che, number_of_rows))\n",
+    "print(p_c_c(che, math, number_of_rows))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "col_row_count=list(map(int,input().strip().split()))\n",
+    "col_count=col_row_count[0]\n",
+    "row_count=col_row_count[1]\n",
+    "train=[]\n",
+    "target=[]\n",
+    "for i in range(row_count):\n",
+    "    row_i=list(map(float,input().strip().split()))\n",
+    "    train.append(row_i[:col_count])\n",
+    "    target.append(row_i[-1])\n",
+    "\n",
+    "test_count=int(input().strip())\n",
+    "\n",
+    "test=[]\n",
+    "\n",
+    "for i in range(test_count):\n",
+    "    row_i=list(map(float,input().strip().split()))\n",
+    "    test.append(row_i[:col_count])\n",
+    "\n",
+    "lm=LinearRegression()\n",
+    "lm.fit(train,target)\n",
+    "print(\"\\n\".join(list(map(str,lm.predict(test)))))\n"
    ]
   }
  ],
